src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__function_missing_inout_assignment.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32, i32, i32 }

@main_instance = global %main zeroinitializer

define i32 @foo(i32 %0, i32* %1, i32* %2) {
entry:
  %foo = alloca i32, align [filtered]
  %input1 = alloca i32, align [filtered]
  store i32 %0, i32* %input1, align [filtered]
  %output1 = alloca i32*, align [filtered]
  store i32* %1, i32** %output1, align [filtered]
  %inout1 = alloca i32*, align [filtered]
  store i32* %2, i32** %inout1, align [filtered]
  store i32 0, i32* %foo, align [filtered]
  %foo_ret = load i32, i32* %foo, align [filtered]
  ret i32 %foo_ret
}

define void @main(%main* %0) {
entry:
  %var1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %var2 = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %var3 = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %load_var1 = load i32, i32* %var1, align [filtered]
  %1 = alloca i32, align [filtered]
  %call = call i32 @foo(i32 %load_var1, i32* %var2, i32* %1)
  ret void
}
