src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__function_missing_input_default_value_assignment.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { i32, i32, i32 }

@main_instance = global %main zeroinitializer

define i32 @foo(i32 %0, ptr %1, ptr %2) {
entry:
  %foo = alloca i32, align [filtered]
  %input1 = alloca i32, align [filtered]
  store i32 %0, ptr %input1, align [filtered]
  %output1 = alloca ptr, align [filtered]
  store ptr %1, ptr %output1, align [filtered]
  %inout1 = alloca ptr, align [filtered]
  store ptr %2, ptr %inout1, align [filtered]
  store i32 0, ptr %foo, align [filtered]
  %3 = load ptr, ptr %output1, align [filtered]
  store i32 0, ptr %3, align [filtered]
  %foo_ret = load i32, ptr %foo, align [filtered]
  ret i32 %foo_ret
}

define void @main(ptr %0) {
entry:
  %var1 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 0
  %var2 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 1
  %var3 = getelementptr inbounds nuw %main, ptr %0, i32 0, i32 2
  %call = call i32 @foo(i32 10, ptr %var2, ptr %var3)
  ret void
}
