src/codegen/tests/snapshots/rusty__codegen__tests__parameters_tests__program_empty_output_assignment.snap
---
source: src/codegen/tests/parameters_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

%prog = type { i32, i32*, i32* }
%main = type { i32, i32, i32 }

@prog_instance = global %prog zeroinitializer
@main_instance = global %main zeroinitializer

define void @prog(%prog* %0) {
entry:
  %input1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 0
  %output1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 1
  %inout1 = getelementptr inbounds %prog, %prog* %0, i32 0, i32 2
  ret void
}

define void @main(%main* %0) {
entry:
  %var1 = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %var2 = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %var3 = getelementptr inbounds %main, %main* %0, i32 0, i32 2
  %load_var1 = load i32, i32* %var1, align 4
  store i32 %load_var1, i32* getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 0), align 4
  %empty_varinout = alloca i32, align 4
  store i32* %empty_varinout, i32** getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 1), align 8
  store i32* %var3, i32** getelementptr inbounds (%prog, %prog* @prog_instance, i32 0, i32 2), align 8
  call void @prog(%prog* @prog_instance)
  ret void
}

